--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "dynamodb-keyspace",
 	"description": "Utilities for aws-sdk-v3 DynamoDB client that provide better typescript support and APIs for scalable usage.",
-	"version": "0.0.5",
+	"version": "0.0.6",
 	"main": "./dist-cjs/index.js",
 	"module": "./dist-es/index.js",
 	"types": "./dist-types/index.d.ts",
@@ -18,6 +18,9 @@
 		"test": "jest",
 		"patch": "npm version patch && npm publish",
 		"cdk": "cdk"
+	},
+	"dependencies": {
+		"object-key-casing": "^0.0.2"
 	},
 	"devDependencies": {
 		"@aws-sdk/client-dynamodb": "^3.369.0",
@@ -44,7 +47,8 @@
 	},
 	"peerDependencies": {
 		"@aws-sdk/client-dynamodb": "^3.369.0",
-		"@aws-sdk/lib-dynamodb": "^3.369.0"
+		"@aws-sdk/lib-dynamodb": "^3.369.0",
+		"ts-toolbelt": "^9.6.0"
 	},
 	"author": {
 		"name": "xKore",
